Bug 502124 - dolphin does not open *.gz files (gzip) or *.xz files when "Open archive as folder" is enabled
Summary: dolphin does not open *.gz files (gzip) or *.xz files when "Open archive as ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.2
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-28 11:47 UTC by antonio
Modified: 2025-09-28 13:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description antonio 2025-03-28 11:47:15 UTC
SUMMARY

STEPS TO REPRODUCE
1. open Dolphin
2. click on a gzip file

OBSERVED RESULT
Dolphin returns: "Invalid protocol 'gzip'"

EXPECTED RESULT
that Dolphin open gzip file as folder

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux 12
KDE Plasma Version: 6.3.2
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Graphics Platform: Wayland
Comment 1 TraceyC 2025-04-01 22:41:13 UTC
I am unable to replicate that error on git-master. Double clicking a .gz file in Dolphin opens the file in Ark, the default compressed file application. This is likely a misconfiguration of your system.

There are a couple of things you can check.
- Make sure Ark or another application is installed to be able to open .gz, .zip and other compressed files. 
- Try opening Ark / your compressed file app and open the file from there
- Go into Dolphin Settings - Context Menu - is "'Compress' service menu" checked?
Comment 2 antonio 2025-04-02 06:38:21 UTC
(In reply to TraceyC from comment #1)
> I am unable to replicate that error on git-master. Double clicking a .gz
> file in Dolphin opens the file in Ark, the default compressed file
> application. This is likely a misconfiguration of your system.
> 
> There are a couple of things you can check.
> - Make sure Ark or another application is installed to be able to open .gz,
> .zip and other compressed files. 
> - Try opening Ark / your compressed file app and open the file from there
> - Go into Dolphin Settings - Context Menu - is "'Compress' service menu"
> checked?

Hi,
I did some tests:

- preparing files for the test:

$ mkdir -pv /tmp/tempdir/test
$ cd /tmp/tempdir
$ date > test/file.txt
$ tar cf 1.tar test/file.txt
$ tar --gzip -cf 2.tgz test/file.txt
$ tar --lzma -cf 3.tar.xz test/file.txt
$ tar --lzop -cf 4.tar.lzop test/file.txt
$ lzop < test/file.txt > 5.lzop
$ lzma < test/file.txt > 6.lzm
$ gzip test/file.txt && mv test/file.txt.gz 7.gz
$ rmdir -v test

move files to "$HOME/Desktop"

$ mv -v 1.tar  2.tgz  3.tar.xz  4.tar.lzop  5.lzop  6.lzma  7.gz "${HOME:?}/Desktop"
$ cd "${HOME:?}/Desktop"
$ rmdir -v /tmp/tempdir
$ ls

1.tar  2.tgz  3.tar.xz  4.tar.lzop  5.lzop  6.lzma  7.gz

open from desktop:
 1.tar      -> open ark - OK
 2.tgz      -> open ark - OK
 3.tar.xz   -> open ark - OK
 4.tar.lzop -> open ark - OK
 5.lzop     -> open ark - OK
 6.lzma     -> open ark - OK
 7.gz       -> open ark - OK

open with Dolphin (flag "Settings->View->Open archive as folder" ENABLED):
 1.tar      -> view folder - OK
 2.tgz      -> view folder - OK
 3.tar.xz   -> view folder - OK
 4.tar.lzop -> open ark    - OK
 5.lzop     -> open ark    - OK
 6.lzma     -> Invalid protocol 'lzma' - ERROR
 7.gz       -> Invalid protocol 'gzip' - ERROR

open with Dolphin (flag "Settings->View->Open archive as folder" DISABLED):
 1.tar      -> open ark    - OK
 2.tgz      -> open ark    - OK
 3.tar.xz   -> open ark    - OK
 4.tar.lzop -> open ark    - OK
 5.lzop     -> open ark    - OK
 6.lzma     -> open ark    - OK
 7.gz       -> open ark    - OK

mimelist content:
$ grep "ark.desktop" "$HOME/.config/mimeapps.list"
application/x-compressed-tar=ark.desktop;org.kde.ark.desktop;xarchiver.desktop;
application/x-gzip=ark.desktop;org.kde.ark.desktop;xarchiver.desktop;
application/x-tar=org.kde.ark.desktop;xarchiver.desktop;
application/x-tar-gz=org.kde.ark.desktop;xarchiver.desktop;
application/x-tarz=org.kde.ark.desktop;xarchiver.desktop;
application/x-tgz=org.kde.ark.desktop;xarchiver.desktop;
application/x-xz-compressed-tar=org.kde.ark.desktop;org.kde.kate.desktop;xarchiver.desktop;
application/zip=org.kde.ark.desktop;
application/gzip=org.kde.ark.desktop;xarchiver.desktop;

so the problem occurs when the "Open archive as folder" is enabled
Comment 3 TraceyC 2025-04-02 19:52:33 UTC
Thanks for the detailed testing! I am able to replicate the error on Dolphin built from git-master with these steps
Note that xz is the successor to lzma, and my distro doesn't have support for files with the lzma extension, so I saved the lzma file with the xz extension

**System setup**
- Dolphin Settings - Enabled "Open archive as folder"

date > file.txt
lzma < file.txt > 6.xz
gzip file.txt && mv file.txt.gz 7.gz

1. Open Dolphin and try to open the two test files

Result: "Invalid protocol 'gzip'" or "Invalid protocol 'xz'"
Comment 4 Daniel Duris 2025-07-16 11:33:15 UTC
I can confirm.

Operating System: KDE neon User Edition
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.0
Kernel Version: 6.11.0-29-generic (64-bit)
Graphics Platform: Wayland
Comment 5 Méven 2025-09-26 11:02:42 UTC
Those file types are not archive in a sense, they don't have embedded file hierarchy and tgz do.
They are the content of a file that is compressed.

As such the issue is not that dolphin doesn't open them but tries to open them in the first place when it should launch ark instead.
Comment 6 Bug Janitor Service 2025-09-26 11:17:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2007
Comment 7 Méven 2025-09-28 13:06:19 UTC
Git commit e4f0bd934cef21c9f6031b25b1ec60c288f37daf by Méven Car.
Committed on 28/09/2025 at 12:43.
Pushed by meven into branch 'master'.

kprotocolmanager: don't consider stream protocol for ArchiveMimetype

Since users of this function will want to open the archive with the list
protocol logic but that is impossible for stream file, restrict the
protocol to take into consideration to filesystem input ones.

M  +6    -3    src/core/kprotocolmanager.cpp
M  +2    -0    src/core/kprotocolmanager.h

https://invent.kde.org/frameworks/kio/-/commit/e4f0bd934cef21c9f6031b25b1ec60c288f37daf