kprotocolmanager: don't consider stream protocol for ArchiveMimetype

Since users of this function will want to open the archive with the list
protocol logic but that is impossible for stream file, restrict the
protocol to take into consideration to filesystem input ones.

BUG: 502124